src/objects/Procedure_Specimen_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Anterior_deep_Gross_specimen_size__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Anterior-deep Gross specimen size</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anterior_deep_size_unit__c</fullName>
        <label>Anterior-deep size unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Block1__c</fullName>
        <label>Block #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block2__c</fullName>
        <label>Block #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performing Lab</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Procedure Specimen Details</relationshipLabel>
        <relationshipName>Procedure_Specimen_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lymph_node_tissue_present_in_sample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lymph node tissue present in sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Specimen_submitted_for_histology__c</fullName>
        <description>Main Specimen entirely submitted for histology</description>
        <inlineHelpText>Main Specimen entirely submitted for histology</inlineHelpText>
        <label>Main Specimen submitted for histology</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medial_lateral_Gross_specimen_size__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Medial-lateral Gross specimen size</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medial_lateral_size_unit__c</fullName>
        <label>Medial-lateral size unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Surgery Summary</label>
        <referenceTo>Post_Surgaory_Summary__c</referenceTo>
        <relationshipLabel>Procedure Specimen Details</relationshipLabel>
        <relationshipName>Procedure_Specimen_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure</label>
        <referenceTo>Procedure__c</referenceTo>
        <relationshipLabel>Procedure Specimen Details</relationshipLabel>
        <relationshipName>Procedure_Specimen_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Single_Speciment_submitted_for_histology__c</fullName>
        <description>Single Speciment entirely submitted for histology</description>
        <inlineHelpText>Single Speciment entirely submitted for histology</inlineHelpText>
        <label>Single Speciment submitted for histology</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slice1__c</fullName>
        <label>Slice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slice2__c</fullName>
        <label>Slice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slice_Plane1__c</fullName>
        <label>Slice Plane1</label>
        <picklist>
            <picklistValues>
                <fullName>Ant-most</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med-most</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sup-most</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slice_Plane2__c</fullName>
        <label>Slice Plane2</label>
        <picklist>
            <picklistValues>
                <fullName>Post-most</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lat-most</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inf-most</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slicing_Method__c</fullName>
        <label>Slicing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Anterior/Posterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medial/Lateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior/Inferior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specimen__c</fullName>
        <label>Specimen</label>
        <picklist>
            <picklistValues>
                <fullName>Main specimen with separately submitted margins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Specimen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Superor_inferior_Gross_specimen_size__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Superor-inferior Gross specimen size</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Superor_inferior_size_unit__c</fullName>
        <label>Superor-inferior size unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Slices__c</fullName>
        <label>Total Slices</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pg_ProcedureSpecimen_Id__c</fullName>
        <label>pg_ProcedureSpecimen_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Procedure Specimen Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Procedure Specimen Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedure Specimen Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>